# offical-flask

./: .flake8  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
src/flaskr/: __init__.py  auth.py  blog.py  db.py
src/flaskr/templates/: base.html
src/flaskr/templates/blog/: index.html
tests/: __init__.py  conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
