[tool.poetry]
name = "offical-flask"
version = "0.1.0"
description = "The flask tutorial"
authors = ["Andrew Casey <accasey@hotmail.com.au>"]
homepage = "https://github.com/accasey/offical-flask"
repository = "https://github.com/accasey/offical-flask"


[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
desert = "^2020.1.6"
marshmallow = "^3.7.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"
coverage = {extras = ["toml"], version = "^5.2.1"}
pytest-cov = "^2.10.1"
pytest-mock = "^3.2.0"
flake8 = "^3.8.3"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.1.4"
flake8-import-order = "^0.18.1"
safety = "^1.9.0"
mypy = "^0.782"
typeguard = "^2.9.1"
flake8-annotations = "^2.3.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.2"
xdoctest = "^0.13.0"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.0"
codecov = "^2.1.8"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["flaskr"]

[tool.coverage.report]
show_missing = true
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
